Added new validation constraints

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -16,14 +16,17 @@ NotBlank.type.generalLicence=General Licence must be provided
 Pattern.type.generalLicence=Value for general licence not valid
 NotNull.type.requiredSpecificLicence=Specific licence value is missing
 
-NotBlank.machineryBeaconOnly.beaconID=Missing beacon ID
+NotBlank.machineryBeaconOnly.macAddress=Missing BLE mac address of the beacon
+NotBlank.machineryBeaconOnly.position=Insert the position of the beacon
+NotNull.machineryBeaconOnly.safetyDistance=Missing safety distance value for the beacon
+DecimalMin.machineryBeaconOnly.safetyDistance=Safety distance must be higher than 0.1 mt
+DecimalMax.machineryBeaconOnly.safetyDistance=Safety distance must be lower than 100 mt
 
 NotBlank.machinery.name=Missing name property
 NotBlank.machinery.typeName=Missing machinery type
-NotBlank.machinery.secureDistance=Insert a value for secure distance
-Min.machinery.secureDistance=Secure distance must be greater than 0
 NotNull.machinery.techSpecifications=Missing field techSpecifications
 NotNull.machinery.identificationPlate=Missing field identificationPlate
+NotBlank.machinery.board_macBLE=Missing BLE mac address of the machinery's board
 
 NotNull.mapping.date=Insert Date for site configuration
 NotNull.mapping.activeMachines=Information on active machineries must be provided
