Added isRemote property in Machinery

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -21,6 +21,7 @@ NotBlank.machineryBeaconOnly.position=Insert the position of the beacon
 NotNull.machineryBeaconOnly.safetyDistance=Missing safety distance value for the beacon
 DecimalMin.machineryBeaconOnly.safetyDistance=Safety distance must be higher than 0.1 mt
 DecimalMax.machineryBeaconOnly.safetyDistance=Safety distance must be lower than 100 mt
+NotNull.machinery.isRemote = Missing control mode information
 
 NotBlank.machinery.name=Missing name property
 NotBlank.machinery.typeName=Missing machinery type
