Added general alarm method

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -32,4 +32,7 @@ NotBlank.machinery.board_macBLE=Missing BLE mac address of the machinery's board
 NotNull.mapping.date=Insert Date for site configuration
 NotNull.mapping.activeMachines=Information on active machineries must be provided
 
+NotBlank.generalAlarm.description=Provide a short description of the alert
+NotBlank.generalAlarm.priority=Insert a priority value
+
 
