Fixed configuration message through MQTT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.data.mongodb.auto-index-creation=true
 
 
 #MQTT PROPERTIES
-mqtt.broker.url=tcp://rabbit:1883
-mqtt.client.id=baseID
+mqtt.broker.url=tcp://rabbitmq:1883
+mqtt.client.id=general_sender
 mqtt.client.pubQoS=1
-mqtt.topic.machineriesConfigTopic=machinery/id
+mqtt.topic.machineriesConfigTopic=zone/default/machinery/configuration
+mqtt.topic.allMachineriesTopic=zone/default/machinery/all/alarms
 mqtt.auth.username=guest
 mqtt.auth.password=guest
